[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Network/Network.gd" type="Script" id=1]
[ext_resource path="res://src/Network/GameLifecycleManager.gd" type="Script" id=2]
[ext_resource path="res://src/Network/LobbyManager.gd" type="Script" id=3]
[ext_resource path="res://src/Network/Server.gd" type="Script" id=4]
[ext_resource path="res://src/Network/Client.gd" type="Script" id=5]

[node name="Network" type="Node"]
script = ExtResource( 1 )

[node name="LobbyManager" type="Node" parent="."]
script = ExtResource( 3 )

[node name="GameLifecycleManager" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Client" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Server" type="Node" parent="."]
script = ExtResource( 4 )

[node name="DaysTimer" type="Timer" parent="Server"]
[connection signal="timeout" from="Server/DaysTimer" to="Server" method="_on_DaysTimer_timeout"]
